--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "AgroMarketHub Backend API",
   "main": "dist/server.js",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
