--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,8 @@
     "cloudinary": "^1.41.0",
     "nodemailer": "^6.9.7",
     "axios": "^1.6.2",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
