--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@types/cors": "^2.8.17",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
+    "@types/node-cron": "^3.0.11",
     "typescript": "^5.3.3",
     "tsx": "^4.7.0",
     "eslint": "^8.56.0",
